# myvtt

./: Cargo.toml  README.md  export_presets.cfg  icon.svg.import  index.html  project.godot  rust.gdextension  rust.gdextension.uid
assets/: hexes.png.import  theme.png.import
assets/map/: 001  001.map  001.ron  hex.xcf
assets/meshes/: hexagonal_prism.tres
godot/rust/src/: lib.rs  rpg_camera.rs
godot/scene/: main.tscn
godot/scripts/: camera_3d.gd.uid
rust/: Cargo.toml
scene/: hexagonal_prims.tscn  hexagonal_prism.tscn  main.tscn  theme.gd.uid
scripts/: camera_3d.gd
src/: camera.rs  components.rs  game.rs  game_config.rs  game_state.rs  main.rs  wasm32_lib.rs
src/components/: asset_manager.rs  camera.rs  game_config.rs  game_state.rs  map.rs  utils.rs
src/game/: brush.rs  camera.rs  camera_controller.rs  draw.rs  entities.rs  events.rs  game_config.rs  game_state.rs  hud.rs  inputs.rs  load.rs  map.rs  theme.rs
src/game/camera_controller/: default.rs
src/game/entities/: default.rs  entity.rs
src/game/map/: assets.rs  default.rs  load.rs  load_save.rs  node.rs  tile.rs  tiles.rs
